# AI-Pdf-Detection

./: .gitignore  README.md  pyproject.toml
scripts/: academic_tools.py
src/ai_saw/: __init__.py  calibrate.py  cli.py  detect.py  extract.py  models.py  report.py  segment.py  sentence.py
src/ai_saw/data/: academic_reference.json
