[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-saw"
version = "0.3.0"
description = "Local AI vs human PDF text detection with academic calibration and sentence-level flagging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pymupdf>=1.24.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.19.0",
]

[project.scripts]
ai-saw = "ai_saw.cli:app"

[tool.setuptools.package-data]
ai_saw = ["data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]
